--- a/wechat_gal/package.json
+++ b/wechat_gal/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.5",
+    "qiniu-js": "^2.4.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
